# DEADLINE!
5월 17일 까지 제작하여 accuaracy 뽑아내기

May. 3. 2022. (B. InSung)
- Tuesday Session Start and want to sleep.
- 일단 새로운 모델로 서버에서 돌려 테스트 결과를 볼 예정.
- 논문에 따르면...
    - "Number of neurons for the first layer were varied within the set {180, 200, 250} and for the second layer, it varies in range {80, 100, 120}. All of them produce similar performance when the other hyper parameters are chosen accordingly."
    G., S., T., K.P. & V., K.K. Classification of ECG beats using deep belief network and active learning. Med Biol Eng Comput 56, 1887–1898 (2018). https://doi.org/10.1007/s11517-018-1815-2
        - 에서 레이어의 갯수를 정해주고 있다. 일단은 그에 맞게 출력을 해야하니 다시 해보자고...
- 일단 레이어 수는 맞췄음, 지금부터는 레이어수와 함께 그리고 loss 값을 토대로 입력을 해야함. 최종 결과 값은 AWS 내에서 돌려서 확인 후 출력 값으로 결정할 예정.
- BBRBM 레이어 성공. 추후 계획은 아래에
    - GBRBM을 설계하고 Testset으로 accuaracy 측정하여 결과값 보기.

May. 2. 2022. (B. InSung)
- Monday Session Start!
- Torch tensor size error. Target Size가 [1, 1] 이면 Tensor Size가 [1, 10] 으로 맞지가 않음.
    - Tensor size를 1, 1로는 줄일수가 없음. Input 이미 입력된 사이즈가 정해져 있기 때문에 따로 변경이 어려움. 그렇기에 이를 변형을 하던가 하나씩 넣어야하는데...
    문제는 그렇게 하면 선형 연산이 되질 않음. 사이즈 변형을 함부로 할 수 없는 상태. 3차원으로 가도 Size가 맞지 않음.
- StackOverflow를 통해 얻은 지식... https://stackoverflow.com/questions/72081872/runtimeerror-output-with-shape-1-doesnt-match-the-broadcast-shape-10/
    - Mandias 의 말에 따르면 F.linear() 에 들어가 있는 Parameters 중에 self.W (이.하. w) 의 크기가 [1, 10] 으로 되어 있기 때문에 Input 1을 넣어 Output 10을 요구하는 것이라고 한다. 
    Mandias는 이를 해결하기 위해서 self.W.squeeze를 말했다만, 이는 나의 코드에서도 동일한 오류가 발생한다. 분명 모든 사이즈와 차원이 1차원이라면... 오류가 날 이유가 없다...
    
- 만일 Input이 1이고 Ouput이 10이여서 문제라면 10, 10 으로 변경하면...?
    - 성공적으로 코드는 돌아감. 다른 오류가 생김. 역시나 이게 바로 인공지능인가 싶다. 허ㅏ어하ㅓ아ㅣ허민어히ㅏㅓ;ㅓㅇㅎ어ㅓㅏㅇ하ㅓㅏ
    - 몰라 일단 오늘 끝이야.

May. 1. 2022 (B. InSung)
- Sunday and May is start!
- Tensor dimension 및 여러문제를 맞춰주니 다른 문제가 발생함.
    - Sample_data 와 weight의 크기가 10, 1로 달라 선형 연산이 안됨. 이에 대한 해결책은 모색중이나 대부분 MNIST에서 오류가 발생
        - MNIST에서 이미지 데이터를 갖고올때 3차원이 아닌 4차원으로 변형이 되어버림. 즉, 그로 인해 잘못된 데이터를 갖고 옮.
- README 수정. RBM.py 변경 사항을 수정함.