@@ -1,6 +1,9 @@
 # DEADLINE!
 5월 17일 까지 제작하여 accuaracy 뽑아내기
 
+May. 4. 2022 (B. InSung)
+- BBRBM 3개, GBRBM 3개 모두 쌓아서 Train Code 완성. AWS 내에서 테스트 할 예정
+
 May. 3. 2022. (B. InSung)
 - Tuesday Session Start and want to sleep.
 - 일단 새로운 모델로 서버에서 돌려 테스트 결과를 볼 예정.
